tagged "Redraw" two translation revision
Monotone-Parent: cbae5f8b51dee96e49366c875548c98d4b0936c7
Monotone-Revision: ce172d5d2d9dc72f555322cf1c54e84d78758630

Monotone-Author: walking@mail.i2p
Monotone-Date: 2009-11-03T15:17:14
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/locale/messages_zh.po
+++ b/apps/routerconsole/locale/messages_zh.po
@@ -2250,7 +2250,7 @@ msgstr "内置的匿名Web服务器"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:68
 msgid "Webserver"
-msgstr "匿名主页"
+msgstr "匿名主页服务器"
 
 #: src/net/i2p/router/web/SummaryBarRenderer.java:72
 msgid "Configure I2P Router"
@@ -2695,7 +2695,7 @@ msgstr "IRC 代理"
 
 #: strings/Strings.java:35
 msgid "eepsite"
-msgstr "匿名主页(eepiste)"
+msgstr "匿名网站"
 
 #: strings/Strings.java:37
 msgid "I2PSnark"
