Add "midnight" theme to the installer manifest; bump to -14.
Monotone-Parent: bb0eb1df5d7b6700cff5ad4bf9c8e533898d8221
Monotone-Revision: 255a97adec49bb360bb6738241301d3a89a1b223

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-11-09T18:00:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-11-09
+    * New midnight blue lightweight theme; supports IE and provisions its own console_big.css
+    * Streamlining and honing of console_big.css
+
 2009-11-08 zzz
     * Console:
       - countries.txt: Convert to mixed case, include in update
