* Console: Some colon cleansing     * Shitlist: Move HTML renderer to router console,       add cause parameter for ease of translation,       tag all causes
Monotone-Parent: 6b28f887a85b1da1a093c5f9bbfb7a42bc11fe60
Monotone-Revision: 26ec0f5286a44599c25be07d37242b4b47d53c1f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-11T20:28:13
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
 2009-11-11 zzz
+    * Console: Some colon cleansing
+    * FloodfillPeerSelector: Adjustments
+    * Shitlist: Move HTML renderer to router console,
+      add cause parameter for ease of translation,
+      tag all causes
+
+2009-11-11 zzz
     * Addressbook, NamingService: Allow 516 byte dests
       that end with AA but not AAAA, so we can permit
       non-null zero-length certs.
