* HTTP Proxy:       - Add support for error page translations       - Add support for external pages for all errors       - Fix lack of \r in error page headers       - HTML transitional fixes       - Cleanups
Monotone-Parent: 88e5d27910fe27adcc442377a5cd604b55c8353d
Monotone-Revision: 2c609e20d3a42bd6c9cc2ba56a8438991a8d89f1

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-14T15:05:44
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2009-11-14 zzz
+    * HTTP Proxy:
+      - Add support for error page translations
+      - Add support for external pages for all errors
+      - Fix lack of \r in error page headers
+      - HTML transitional fixes
+      - Cleanups
+    * UDP PeerTestManager: Throw in some synchronization to
+      try to fix stuck tests
+
 2009-11-11 zzz
     * Console: Some colon cleansing
     * FloodfillPeerSelector: Adjustments
