- Note failed floods in the profile       - Reduce max flood
Monotone-Parent: 51d5066bf68382bdc705c6da3aa7769c716e85d2
Monotone-Revision: de35fdcdc8943537c71571c5c9d8320a24768cdf

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-18T14:24:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,13 @@
+2009-11-18 zzz
+    * Build: Don't update the po files by default, add new
+      target "poupdate" to do that.
+    * Netdb:
+      - Floodfill rework part 3 of N: Send closest-to-the-key
+        in DSRM replies
+      - Adjust criteria for following DSRM
+      - Note failed floods in the profile
+      - Reduce max flood
+
 2009-11-16 zzz
     * addressbook: Move class to net.i2p.addressbook
     * build: Take two test scripts out of the installer
