* Netdb Floodfill rework part 4 of N: Search closest-to-the-key
Monotone-Parent: 8bcb376f145a419f5ed05d3d9968e4e1a23b5688
Monotone-Revision: b44fbd3635c919d66000a94358697be5da8caf3f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-11-21T13:50:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,14 @@
+2009-11-21 zzz
+    * Netdb Floodfill rework part 4 of N:
+      - Search closest-to-the-key
+      - Put closest-to-the-key in explore don't-include-list
+      - Use facade's peer selector for exploration rather than
+        instantiating a new one
+      - Adjust response time limit
+    * netdb.jsp: Add popups on flags
+    * Routerconsole build: rename include files so they aren't
+      compiled and bundled separately (~15KB)
+
 2009-11-18 zzz
     * Build: Don't update the po files by default, add new
       target "poupdate" to do that.
