* Improvement to BOB's TCPio to hopefully lower load average. It seems       to be helping a little when stress-tested with Robert.
Monotone-Parent: 7b3aa360fa8dfeccdad18a6b41ebb26259e2b9b4
Monotone-Revision: 9890d34ce28a51f65275706136853993d52c6615

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-11-28T13:53:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-11-28 sponge
+    * Improvement to BOB's TCPio to hopefully lower load average. It seems
+      to be helping a little when stress-tested with Robert.
+
 2009-11-24 zzz
     * DataStructures: Remove unused Logs
     * OrderedProperties: Simplify, use in i2psnark
