net.i2p.router.transport.udp deadwood code cleanup. documented rare NPE in InboundEstablishState.java.
Monotone-Parent: 9890d34ce28a51f65275706136853993d52c6615
Monotone-Revision: 195bb525cac9d157b7fa896834b79e4b2d256347

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-11-29T15:02:50
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-11-29 sponge
+    * net.i2p.router.transport.udp deadwood code cleanup.
+    * documented rare NPE in InboundEstablishState.java.
+
 2009-11-28 sponge
     * Improvement to BOB's TCPio to hopefully lower load average. It seems
       to be helping a little when stress-tested with Robert.
