--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2009-11-29 zzz
+    * config.jsp: Comment out unused stuff better
+    * profiles.jsp: Hide non-ff from ff table
+    * HTTP Proxy: Don't send proxy.i2p to the naming service,
+      it was making the error pages load slowly
+    * SOCKS Proxy: Fix an error message
+    * Transport: Fix the default inbound burst
+
 2009-11-29 sponge
     * net.i2p.router.transport.udp deadwood code cleanup.
     * documented rare NPE in InboundEstablishState.java.
