* BOB: fix a critical bug causing ghosts on probes and remove unused code.
Monotone-Parent: ecaa235aa923afcaf1870327e9d548a7150c33c2
Monotone-Revision: da507e67b02527a43e8cca4b5b20c2de18a3142c

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-12-05T13:26:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-12-05 sponge
+    * BOB: fix a critical bug causing ghosts on probes
+      and remove unused code.
+
 2009-12-04 zzz
     * Console: Close up some possible XSS (thanks Pragmatk)
     * i2psnark: Config cleanup, more HTML transitional fixes
