* Build: Fix poupdate dependency     * Console: Add Russian option
Monotone-Parent: 341f74317ed51b761086bdf3d3be7778c27604e4
Monotone-Revision: 5192f8fa6d34fe81e76f9a70693b75b0d6fc0ec7

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-05T17:19:23
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-12-05 zzz
+    * Build: Fix poupdate dependency
+    * Console: Add Russian option
+
 2009-12-05 sponge
     * BOB: fix a critical bug causing ghosts on probes
       and remove unused code.
