* Misc. cleanups after review, prep for release
Monotone-Parent: ef1010c37be3810429094c6549a5eef2060c2c63
Monotone-Revision: 9cbd8dd53e3ccdf1b5e6b3941f19faa5a236ee43

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-08T00:41:58
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/locale/messages_de.po
+++ b/apps/routerconsole/locale/messages_de.po
@@ -3126,7 +3126,7 @@ msgstr "Falls es Dir möglich ist, richte bitte deine Firewall so ein, das die T
 msgid ""
 "If you can't, I2P supports UPnP (Universal Plug and Play) and UDP hole "
 "punching with \"SSU introductions\" to relay traffic."
-msgstr "Falls es dir nicht möglich ist hat I2P UPnP (Universelles Plug and Play) Unterstützung und UDP Weiterleitung mit Hilfe der \"SSU Hilsfrouter\" eingebaut.""
+msgstr "Falls es dir nicht möglich ist hat I2P UPnP (Universelles Plug and Play) Unterstützung und UDP Weiterleitung mit Hilfe der \"SSU Hilsfrouter\" eingebaut."
 
 #: ../jsp/WEB-INF/classes/net/i2p/router/web/jsp/config_jsp.java:506
 msgid ""
