--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2009-12-08  0.7.8 released
+
+2009-12-08 zzz
+    * Misc. cleanups after review, prep for release
+
 2009-12-06 zzz
     * netdb.jsp: Fix bug caused by XSS fix
     * Translations: drop ru until after release
