disable internal sockets until I can fix the borkenness
Monotone-Parent: b0b58f05a4273052bd0648ab3a085dc54adc0d12
Monotone-Revision: 6f3cf7f601a787c4f68d1d04a562dd830e32b1c4

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-12T01:36:57
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-12-12 zzz
+    * Disable InternalSockets until it's fixed
+
 2009-12-11 zzz
     * Addressbook, susidns: Rework addressbook into a
       HttpServlet, so susidns can kick it when the subscription
