* Find ResourceBundles in wars     * Fix restart from config.jsp if no wrapper     * i2psnark: Elaborate popups
Monotone-Parent: f6b1a4186bd127ebbd69e633db240413dd24ec42
Monotone-Revision: 20dc76de888f39143bd40bb438a000abf8b7a88a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-13T15:47:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,7 +1,14 @@
-2009-12-12 zzz
-    * Disable InternalSockets until it's fixed
+2009-12-13 zzz
+    * Find ResourceBundles in wars
+    * Fix restart from config.jsp if no wrapper
+    * i2psnark: Elaborate popups
+
+2009-12-12 welterde
     * Sort peers on tunnels.jsp by country
     * fix NPE in ^^
+
+2009-12-12 zzz
+    * Disable InternalSockets until it's fixed
 
 2009-12-11 zzz
     * Addressbook, susidns: Rework addressbook into a
