fix i2ptunnel bundles
Monotone-Parent: 758eaeb06de99e3ac5c1f41af52c4e0c96c4ddc4
Monotone-Revision: 9cb237ff3b0da289082d8aa5d15dfb6e0114b0d8

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-15T01:51:56
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2009-12-15 zzz
+    * HTTP Proxy: Make jump server list configurable
+    * i2psnark: Fix stop/start, cleanups
+    * i2ptunnel: Fix bundle location
+    * susidns: UTF-8 fixes
+    * TunnelManager: Fix a locking bug
+    * Update: Improve error message
+
 2009-12-13 zzz
     * Find ResourceBundles in wars
     * Fix restart from config.jsp if no wrapper
