--- a/history.txt
+++ b/history.txt
@@ -1,8 +1,30 @@
+2009-12-18 zzz
+    * Console: Fix spacing in update section
+    * I2CP:
+      - Move client-side writes to their own thread
+      - Reenable InternalSockets
+    * i2ptunnel: Fix bundle script
+    * InNetMessagePool: Cleanup
+    * SusiDNS:
+      - Remove untranslatable button images (-15KB)
+      - Tag buttons and messages
+      - Add some button CSS
+    * Tunnel building:
+      - Increase timeout to 13s (was 10s)
+      - Fix tunnel.buildReplyTooSlow stat
+      - Tweak logging
+      - Prioritize expl. builds over client builds
+      - Code cleanups
+    * TunnelSettings: Drop, unused
+
 2009-12-15 zzz
     * HTTP Proxy: Make jump server list configurable
+    * I2CP: Remove unused logs
     * i2psnark: Fix stop/start, cleanups
     * i2ptunnel: Fix bundle location
-    * susidns: UTF-8 fixes
+    * SusiDNS:
+      - Rewrite and correct a lot of the text, tag jsps
+      - UTF-8 fixes
     * TunnelManager: Fix a locking bug
     * Update: Improve error message
 
