* Log:       - Close old file on rotate       - Buffer writes       - Write in UTF-8
Monotone-Parent: a0f3d4bd7b7919f6cfa60db64a7d8432ab9d6237
Monotone-Revision: f4844377e42a33614c0a9e34e6e5e73456a25311

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-18T00:04:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -5,6 +5,10 @@
       - Reenable InternalSockets
     * i2ptunnel: Fix bundle script
     * InNetMessagePool: Cleanup
+    * Log:
+      - Close old file on rotate
+      - Buffer writes
+      - Write in UTF-8
     * SusiDNS:
       - Remove untranslatable button images (-15KB)
       - Tag buttons and messages
